# whyis

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  PACKAGE_UPGRADE_GUIDE.md  README.md  SMOKE_TEST.md  TESTING.md  TESTING_SUMMARY.md  TEST_COVERAGE_EXTENSION.md  UPGRADE_SUMMARY.md  Vagrantfile  admin.properties  apache.conf  api.py  authenticator.py  autonomic.py  base.trig  blazegraph.pp  blazegraph.properties  bootstrap.sh  commands.py  config-defaults.py  config.py  config_defaults.py  create_kbs.sh  curation.py  database.py  datastore.py  dataurl.py  default_vocab.ttl  elastic_eval.py  elastic_index_settings.json  elasticstore.py  empty.py  filters.py  full_smoke_test.sh  importer.py  install.sh  (+24 more)
.circleci/: config.yml  lint-js.sh  lint-py.sh  lint.sh  test-ci.sh  test-docker-monolithic.sh  test-integration.sh  test-js.sh  test-unit.sh  test-vue.sh  test.sh
.github/: copilot-instructions.md
agents/: __init__.py  hermit.py  nlp.py
autonomic/: __init__.py  autonomic_setlr.py  crawler.py  dataset_importer.py  deductor.py  email_notifier.py  global_change_service.py  importer_crawler.py  namespaces.py  ontology_importer.py  service.py  setl_maker.py  update_change_service.py
commands/: __init__.py  load_nanopub.py  run_interpreter.py  runserver.py  test.py
config-template/: cookiecutter.json
docker/: Dockerfile  README.md  README.org  docker-compose-dev.yml  docker-compose.yml
dockerfiles/: Dockerfile  README.org  docker-cmd.sh  docker-compose-dev.yml  docker-entrypoint.sh
docs/: CNAME  README.md  _config.yml  api.rst  api.yaml  conf.py  (+20 more)
(+1070 files in other folders)
