[aliases]
#test = pytest

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[flake8]
exclude = config-template,venv
ignore = E115,E116,E121,E122,E126,E127,E128,E201,E202,E203,E226,E225,E228,E231,E241,E251,E261,E265,E301,E302,E303,E305,E501,W291,W293

[pycodestyle]
exclude = config-template,venv
ignore = E115,E116,E121,E122,E126,E127,E128,E201,E202,E203,E211,E221,E226,E225,E228,E231,E241,E251,E261,E265,E266,E301,E302,E303,E305,E501,W291,W293
